--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,9 @@ p {
     margin: 0;
 }
 
-
+button {
+    margin: 0;
+}
 
 /* grid setup */
 
@@ -25,21 +27,31 @@ p {
     max-height: 100vh;
     aspect-ratio: 1440 / 1024;
     border: 2px solid black;
+    /* font-size: 90%; */
 }
 
 h1 {
     grid-column: 1 / 3;
     text-align: center;
-    margin-top: 46px;
-    margin-bottom: 42px;
+    margin-top: 0.5em;
+    margin-left: 2em;
+    margin-right: 2em;
+    margin-bottom: 0.5em;
     padding: 0px;
+    font-weight: 700;
+    font-size: 48px;
+    /* font-size: 64px; */
 }
 
 .poke-container {
     grid-column: 1;
     grid-row: 2;
     display: flex;
+    height: 100%;
     flex-direction: column;
+    padding-left: 4.5em;
+    padding-right: 4.5em;
+    box-sizing: border-box;
     /* border: 2px solid black; */
     align-items: center;
 }
@@ -49,6 +61,9 @@ h1 {
     grid-row: 2;
     display: flex;
     flex-direction: column;
+    padding-left: 4em;
+    padding-right: 4em;
+    box-sizing: border-box;
     /* border: 2px solid black; */
     align-items: center;
 }
@@ -85,12 +100,13 @@ h1 {
 
 .image-display {
     display: flex;
-    width: min(50%, 463px);
+    /* width: min(50%, 463px); */
+    width: 100%;
     /* max-height: 463px; */
     aspect-ratio: 1 / 1;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    border: 4px solid black;
     margin-bottom: 1em;
 }
 
@@ -102,15 +118,59 @@ h1 {
 
 .name-display {
     display: flex;
-    width: min(50%, 463px);
+    width: 100%;
+    /* width: min(50%, 463px); */
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    border: 1px solid black;
+    background-color: #E8E8E8;
+    border-radius: 10px;
     margin-bottom: 1em;;
+}
+
+#pokemon-name {
+    font-size: 28px;
+    font-weight: 400;
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;;
+}
+
+.types-display {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    align-items: flex-start;
+    gap: 0.5em;
+    margin-bottom: 1em;;
+}
+
+#pokemon-types {
+    display: flex;
+    gap: 0.5em;
+    flex-wrap: wrap;
+}
+
+.type-box {
+    padding: 0.2em 0.4em;
+    background-color: #e0e0e0;
+    border-radius: 0.5em;
+    /* text-transform: capitalize; */
+}
+
+/* arrow styling */
+
+.arrow-buttons {
+    margin: 0;
 }
 
 /* info display */
 
 #info-title {
     font-weight: bold;
+}
+
+.info-box {
+    display: flex;
+    width: 100%;
+    background-color: #E8E8E8;
 }
