--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ h1 {
     align-self: flex-start;
     align-items: flex-start;
     gap: 0.5em;
-    margin-bottom: 1em;;
+    margin-bottom: 2em;;
 }
 
 #pokemon-types {
@@ -160,17 +160,52 @@ h1 {
 /* arrow styling */
 
 .arrow-buttons {
-    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+}
+
+.arrow-buttons button {
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    outline: none;
+    border-radius: 10px;
+}
+
+.arrow-buttons button:hover {
+    opacity: 0.7;
+}
+
+.arrow-buttons button img {
+    display: block;
+    width: 120px;
+    height: auto;
+    max-width: 173px;;
+    aspect-ratio: 173 / 69;
 }
 
 /* info display */
 
 #info-title {
     font-weight: bold;
+    margin-top: 0;
+}
+
+.info-display {
+    width: 100%;
+    height: 100%;
 }
 
 .info-box {
     display: flex;
+    flex-direction: column;;
     width: 100%;
+    height: 83%;
+    max-height: 500px;
     background-color: #E8E8E8;
+    padding: 1em;
+    box-sizing: border-box;
+    /* aspect-ratio: 486 / 598; */
 }
