--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,10 @@ body {
     font-family: "Inter", sans-serif;
     margin: 0;
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
+    /* padding: 1em 1em; */
 }
 
 p {
@@ -71,10 +72,17 @@ h1 {
 /* mobile display */
 
 @media screen and (max-width: 768px) {
+    body {
+        align-items: flex-start;
+        padding: 1em;
+    }
+
     .main-menu {
         grid-template-columns: 1fr;
         grid-template-rows: auto auto auto;
+        width: 100%;
         height: auto;
+        min-height: auto;
         max-height: none;
         aspect-ratio: auto;
     }
@@ -92,6 +100,11 @@ h1 {
     .info-container {
         grid-column: 1;
         grid-row: 3;
+        margin-top: 2em;
+    }
+
+    .info-moves-buttons {
+        margin-bottom: 3em;;
     }
 
 }
@@ -141,7 +154,7 @@ h1 {
     align-self: flex-start;
     align-items: flex-start;
     gap: 0.5em;
-    margin-bottom: 2em;;
+    margin-bottom: 2em;
 }
 
 #pokemon-types {
@@ -151,7 +164,7 @@ h1 {
 }
 
 .type-box {
-    padding: 0.2em 0.4em;
+    padding: 0.3em 0.8em;
     background-color: #e0e0e0;
     border-radius: 0.5em;
     /* text-transform: capitalize; */
@@ -195,17 +208,52 @@ h1 {
 
 .info-display {
     width: 100%;
-    height: 100%;
+    height: 70%;
+    margin-bottom: 3em;;
 }
 
 .info-box {
     display: flex;
     flex-direction: column;;
     width: 100%;
-    height: 83%;
+    height: 100%;
     max-height: 500px;
     background-color: #E8E8E8;
-    padding: 1em;
+    padding: 1.5em;
     box-sizing: border-box;
     /* aspect-ratio: 486 / 598; */
+}
+
+.info-box p {
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.info-moves-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 2em;
+}
+
+.info-moves-buttons button {
+    font-size: 1.5rem;
+    /* padding: 0.4em 1.3em; */
+    cursor: pointer;
+    border: none;
+    /* padding: 0; */
+    outline: none;
+    border-radius: 10px;
+    width: 120px;
+    aspect-ratio: 173 / 69;
+}
+
+.info-moves-buttons button:hover {
+    opacity: 0.7;
+}
+
+.info-moves-buttons button.active {
+    background-color: #7CFF79;
+    /* color: #E8E8E8; */
 }
